--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 </body>
 </html>
 
-let navigation = document.querySelector('.navigation');
-navigation.onclick = function() {
-    navigation.classList.toggle('active');
-}
+<h1 style="color: #ffffff; text-align: center; font-family: sans-serif; margin-top: 20px;">
+  ມຶງລອງກົດເບິ່ງສີຂາວໆນະແລ້ວລອງກົດເຟສບຸກ
+</h1>
