--- a/login.html
+++ b/login.html
@@ -5,33 +5,141 @@
     <title>Animated Leaf Login</title>
     <link rel="stylesheet" href="login-style.css">
     <style>
-        /* เพิ่ม CSS ส่วนนี้ลงไปในไฟล์ CSS หรือวางไว้ตรงนี้ก็ได้ครับ */
+        /* --- ตั้งค่าพื้นฐาน --- */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        /* --- วิดีโอพื้นหลัง --- */
         #bg-video {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover; /* ทำให้วิดีโอเต็มจอ */
-            z-index: -1; /* ส่งวิดีโอไปอยู่หลังสุด */
+            object-fit: cover;
+            z-index: -1;
         }
-        
+
         section {
-            background: transparent !important; /* ทำให้พื้นหลัง section โปร่งใสเพื่อเห็นวิดีโอ */
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+            background: transparent !important;
+            overflow: hidden;
+        }
+
+        /* --- กล่อง Login Glassmorphism --- */
+        .login {
+            position: relative;
+            padding: 60px;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 20px;
+            width: 400px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            z-index: 1000;
+        }
+
+        .login h2 {
+            color: #fff;
+            font-weight: 600;
+            letter-spacing: 2px;
+            text-align: center;
+        }
+
+        .inputBox input {
+            width: 100%;
+            padding: 10px;
+            outline: none;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: transparent;
+            border-radius: 5px;
+            color: #fff;
+        }
+
+        #btn {
+            background: #fff;
+            color: #333;
+            font-weight: 600;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            padding: 10px;
+            transition: 0.3s;
+        }
+
+        #btn:hover {
+            background: #8b2d1f;
+            color: #fff;
+        }
+
+        /* --- จัดการสีน้ำเงินและระยะห่างของลิงก์ --- */
+        .group {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+        }
+
+        .group a {
+            color: #0000ff !important;
+            text-decoration: none;
+            font-size: 14px;
+            transition: 0.3s;
+        }
+
+        .group a:hover {
+            text-decoration: underline;
+            opacity: 0.8;
+        }
+
+        /* --- แอนิเมชันใบไม้ --- */
+        .leaves {
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            pointer-events: none;
+        }
+
+        .leaf {
+            position: absolute;
+            display: block;
+            font-size: 25px;
+            color: #ff9d00;
+        }
+
+        .leaf:nth-child(1) { left: 20%; animation: animate 15s linear infinite; }
+        .leaf:nth-child(2) { left: 50%; animation: animate 20s linear infinite; animation-delay: -5s; }
+        .leaf:nth-child(3) { left: 70%; animation: animate 25s linear infinite; animation-delay: -7s; }
+        .leaf:nth-child(4) { left: 0%; animation: animate 18s linear infinite; animation-delay: -2s; }
+        .leaf:nth-child(5) { left: 85%; animation: animate 14s linear infinite; animation-delay: -10s; }
+        .leaf:nth-child(6) { left: 33%; animation: animate 12s linear infinite; }
+
+        @keyframes animate {
+            0% { opacity: 0; top: -10%; transform: translateX(20px) rotate(0deg); }
+            10% { opacity: 1; }
+            90% { opacity: 1; }
+            100% { top: 110%; transform: translateX(-20px) rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <video autoplay muted loop id="bg-video">
+    <video autoplay muted loop playsinline id="bg-video">
         <source src="zero1.mp4" type="video/mp4">
     </video>
 
     <section>
         <div class="leaves">
             <div class="set">
-                <div><img src="https://i.ibb.co/QrMyLYc/trees.png" style="display:none;"></div> 
-                <div class="leaf">🍂</div>
-                <div class="leaf">🍁</div>
                 <div class="leaf">🍂</div>
                 <div class="leaf">🍁</div>
                 <div class="leaf">🍂</div>
@@ -55,13 +163,14 @@
             <div class="group">
                 <a href="#">Forget Password</a>
                 <a href="#">Signup</a>
-                
             </div>
         </div>
     </section>
 
     <script>
         document.getElementById('btn').onclick = function(){
+            // เปลี่ยนเป็น sessionStorage เพื่อให้สถานะหายไปเมื่อรีเฟรชหน้าเว็บ
+            sessionStorage.setItem('isLoggedIn', 'true');
             window.location.href = "index.html";
         }
     </script>
